==> MartinHN/Inkplate-Arduino-library/src/boards/Inkplate10.cpp <==
#include "../Inkplate.h"
#include "../include/Graphics.h"
#include "../include/defines.h"
#include "EEPROM.h"

void Inkplate::display1b(bool leaveOn, bool fast) {
  // memcpy(DMemoryNew, _partial, E_INK_WIDTH * E_INK_HEIGHT / 8);

    uint32_t _pos;
    uint8_t data;
    uint8_t dram;
    uint8_t _repeat;

    if (!einkOn())
        return;

  if (fast) {
    clean(0, 2);
    clean(1, 1);
    clean(2, 1);
    _repeat = 2;
  } else if (waveformEEPROM.waveformId != INKPLATE10_WAVEFORM1) {
        clean(0, 1);
        clean(1, 12);
        clean(2, 1);
        clean(0, 9);
        clean(2, 1);
        clean(1, 12);
        clean(2, 1);
        clean(0, 9);
        _repeat = 3;
    }
    else
    {
        clean(0, 1);
        clean(1, 10);
        clean(2, 1);
        clean(0, 10);
        clean(2, 1);
        clean(1, 10);
        clean(2, 1);
        clean(0, 10);
        _repeat = 5;
    }

    for (int k = 0; k < _repeat; k++)
    {
        _pos = (E_INK_HEIGHT * E_INK_WIDTH / 8) - 1;
        vscan_start();
        for (int i = 0; i < E_INK_HEIGHT; i++)
        {
            dram = (*(DMemoryNew + _pos));
            data = LUTB[(dram >> 4) & 0x0F];
            hscan_start(pinLUT[data]);
            data = LUTB[dram & 0x0F];
            GPIO.out_w1ts = pinLUT[data] | CL;
            GPIO.out_w1tc = DATA | CL;
            _pos--;
            for (int j = 0; j < ((E_INK_WIDTH / 8) - 1); j++)
            {
                dram = (*(DMemoryNew + _pos));
                data = LUTB[(dram >> 4) & 0x0F];
                GPIO.out_w1ts = pinLUT[data] | CL;
                GPIO.out_w1tc = DATA | CL;
                data = LUTB[dram & 0x0F];
                GPIO.out_w1ts = pinLUT[data] | CL;
                GPIO.out_w1tc = DATA | CL;
                _pos--;
            }
            GPIO.out_w1ts = CL;
            GPIO.out_w1tc = DATA | CL;
            vscan_end();
        }
        delayMicroseconds(230);
    }

  if (fast) {
    clean(2, 1);
    clean(3, 1);
  } else {
    clean(2, 2);
    clean(3, 1);
  }

    vscan_start();
    if (!leaveOn)
        einkOff();
    _blockPartial = 0;
}

void IRAM_ATTR Inkplate::display3b(bool leaveOn)
{
    if (!einkOn())
        return;

    if (waveformEEPROM.waveformId != INKPLATE10_WAVEFORM1)
    {
        clean(1, 1);
        clean(0, 7);
        clean(2, 1);
        clean(1, 12);
        clean(2, 1);
        clean(0, 7);
        clean(2, 1);
        clean(1, 12);
    }
    else
    {
        clean(1, 1);
        clean(0, 10);
        clean(2, 1);
        clean(1, 10);
        clean(2, 1);
        clean(0, 10);
        clean(2, 1);
        clean(1, 10);
    }

    for (int k = 0; k < 9; k++)
    {
        uint8_t *dp = DMemory4Bit + (E_INK_HEIGHT * E_INK_WIDTH / 2);

        vscan_start();
        for (int i = 0; i < E_INK_HEIGHT; i++)
        {
            uint32_t t = GLUT2[k * 256 + (*(--dp))];
            t |= GLUT[k * 256 + (*(--dp))];
            hscan_start(t);
            t = GLUT2[k * 256 + (*(--dp))];
            t |= GLUT[k * 256 + (*(--dp))];
            GPIO.out_w1ts = t | CL;
            GPIO.out_w1tc = DATA | CL;

            for (int j = 0; j < ((E_INK_WIDTH / 8) - 1); j++)
            {
                t = GLUT2[k * 256 + (*(--dp))];
                t |= GLUT[k * 256 + (*(--dp))];
                GPIO.out_w1ts = t | CL;
                GPIO.out_w1tc = DATA | CL;
                t = GLUT2[k * 256 + (*(--dp))];
                t |= GLUT[k * 256 + (*(--dp))];
                GPIO.out_w1ts = t | CL;
                GPIO.out_w1tc = DATA | CL;
            }

            GPIO.out_w1ts = CL;
            GPIO.out_w1tc = DATA | CL;
            vscan_end();
        }
        delayMicroseconds(230);
    }
    clean(3, 1);
    vscan_start();

    if (!leaveOn)
        einkOff();
}

uint32_t Inkplate::partialUpdate(bool _forced, bool leaveOn, bool fast) {
    if (getDisplayMode() == 1)
        return 0;
  // preloadScreen();
  // display1b(true, true);
  // return 0;
    if (_blockPartial == 1 && !_forced)
    {
        display1b(leaveOn, fast);
        return 0;
    }

    uint32_t _pos = (E_INK_WIDTH * E_INK_HEIGHT / 8) - 1;
    uint32_t _send;
    uint8_t data = 0;
    uint8_t diffw, diffb;
    uint32_t n = (E_INK_WIDTH * E_INK_HEIGHT / 4) - 1;
    uint8_t _repeat;

    uint32_t changeCount = 0;

    for (int i = 0; i < E_INK_HEIGHT; ++i)
    {
        for (int j = 0; j < E_INK_WIDTH / 8; ++j)
        {
            diffw = *(DMemoryNew + _pos) & ~*(_partial + _pos);
            diffb = ~*(DMemoryNew + _pos) & *(_partial + _pos);
      // if (diffw) // count pixels turning from black to white as these are
      //            // visible blur
      // {
      //   for (int bv = 1; bv < 256; bv <<= 1) {
      //     if (diffw & bv)
      //       ++changeCount;
      //   }
      // }
            _pos--;
            *(_pBuffer + n) = LUTW[diffw >> 4] & (LUTB[diffb >> 4]);
            n--;
            *(_pBuffer + n) = LUTW[diffw & 0x0F] & (LUTB[diffb & 0x0F]);
            n--;
        }
    }

    if (!einkOn())
        return 0;

  if (fast) {
    _repeat = 2;
    // } else if (waveformEEPROM.waveformId != INKPLATE10_WAVEFORM1) {
    //   _repeat = 4;
  } else {
    _repeat = 4; // was 5
    }

    for (int k = 0; k < _repeat; ++k)
    {
        vscan_start();
        n = (E_INK_WIDTH * E_INK_HEIGHT / 4) - 1;
        for (int i = 0; i < E_INK_HEIGHT; ++i)
        {
            data = *(_pBuffer + n);
            _send = pinLUT[data];
            hscan_start(_send);
            n--;
            for (int j = 0; j < ((E_INK_WIDTH / 4) - 1); ++j)
            {
                data = *(_pBuffer + n);
                _send = pinLUT[data];
                GPIO.out_w1ts = _send | CL;
                GPIO.out_w1tc = DATA | CL;
                n--;
            }
            GPIO.out_w1ts = _send | CL;
            GPIO.out_w1tc = DATA | CL;
            vscan_end();
        }
        delayMicroseconds(230);
    }
  if (fast) {
    clean(2, 1);
    clean(3, 1);
  } else {
    clean(2, 2);
    clean(3, 1);
  }
    vscan_start();

    if (!leaveOn)
        einkOff();

    memcpy(DMemoryNew, _partial, E_INK_WIDTH * E_INK_HEIGHT / 8);

    return changeCount;
}

void Inkplate::clean(uint8_t c, uint8_t rep)
{
    einkOn();
    uint8_t data = 0;
    if (c == 0)
        data = B10101010;
    else if (c == 1)
        data = B01010101;
    else if (c == 2)
        data = B00000000;
    else if (c == 3)
        data = B11111111;

    uint32_t _send = pinLUT[data];
    for (int k = 0; k < rep; ++k)
    {
        vscan_start();
        for (int i = 0; i < E_INK_HEIGHT; ++i)
        {
            hscan_start(_send);
            GPIO.out_w1ts = (_send) | CL;
            GPIO.out_w1tc = CL;
            for (int j = 0; j < ((E_INK_WIDTH / 8) - 1); ++j)
            {
                GPIO.out_w1ts = CL;
                GPIO.out_w1tc = CL;
                GPIO.out_w1ts = CL;
                GPIO.out_w1tc = CL;
            }
            GPIO.out_w1ts = CL;
            GPIO.out_w1tc = CL;
            vscan_end();
        }
        delayMicroseconds(230);
    }
}

void Inkplate::calculateLUTs()
{
    for (int j = 0; j < 9; ++j)
    {
        for (uint32_t i = 0; i < 256; ++i)
        {
            uint8_t z = (waveform3Bit[i & 0x07][j] << 2) | (waveform3Bit[(i >> 4) & 0x07][j]);
            GLUT[j * 256 + i] = ((z & B00000011) << 4) | (((z & B00001100) >> 2) << 18) |
                                (((z & B00010000) >> 4) << 23) | (((z & B11100000) >> 5) << 25);
            z = ((waveform3Bit[i & 0x07][j] << 2) | (waveform3Bit[(i >> 4) & 0x07][j])) << 4;
            GLUT2[j * 256 + i] = ((z & B00000011) << 4) | (((z & B00001100) >> 2) << 18) |
                                 (((z & B00010000) >> 4) << 23) | (((z & B11100000) >> 5) << 25);
        }
    }
}

bool Inkplate::getWaveformFromEEPROM(struct waveformData *_w)
{
    uint8_t *_ptr = (uint8_t *)_w;
    for (int i = 0; i < sizeof(struct waveformData); i++)
    {
        _ptr[i] = EEPROM.read(i);
    }

    return (calculateChecksum(*_w) != _w->checksum) ? false : true;
}

void Inkplate::burnWaveformToEEPROM(struct waveformData _w)
{
    uint8_t *_ptr = (uint8_t *)&_w;
    for (int i = 0; i < sizeof(struct waveformData); i++)
    {
        EEPROM.write(i, _ptr[i]);
    }
    EEPROM.commit();
}
